crates/panache-parser/tests/snapshots/yaml__yaml_suite_N782.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: N782
input: "[\n--- ,\n...\n]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_PLAIN_SCALAR_IN_FLOW:`---` document marker not allowed in flow content@2..5]
