crates/panache-parser/tests/snapshots/yaml__yaml_suite_NAT4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: NAT4
input: "---\na: '\n  '\nb: '  \n  '\nc: \"\n  \"\nd: \"  \n  \"\ne: '\n\n  '\nf: \"\n\n  \"\ng: '\n\n\n  '\nh: \"\n\n\n  \"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
