crates/panache-parser/tests/snapshots/yaml__yaml_suite_Q8AD.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: Q8AD
input: "---\n\"folded \nto a space,\n \nto a line feed, or \t\\\n \\ \tnon-content\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
