crates/panache-parser/tests/snapshots/yaml__yaml_suite_QLJ7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: QLJ7
input: "%TAG !prefix! tag:example.com,2011:\n--- !prefix!A\na: b\n--- !prefix!B\nc: d\n--- !prefix!C\ne: f\n"
has_error_contract: true
parsed_mapping_tree: true
diagnostics: []
