crates/panache-parser/tests/snapshots/yaml__yaml_suite_RLU9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: RLU9
input: "foo:\n- 42\nbar:\n  - 44\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
