crates/panache-parser/tests/snapshots/yaml__yaml_suite_RZP5.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: RZP5
input: "a: \"double\n  quotes\" # lala\nb: plain\n value  # lala\nc  : #lala\n  d\n? # lala\n - seq1\n: # lala\n - #lala\n  seq2\ne: &node # lala\n - x: y\nblock: > # lala\n  abcde\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
