crates/panache-parser/tests/snapshots/yaml__yaml_suite_SU5Z.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: SU5Z
input: "key: \"value\"# invalid comment\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_COMMENT_NOT_PRECEDED_BY_SPACE:comment must be preceded by whitespace@12..29]
