crates/panache-parser/tests/snapshots/yaml__yaml_suite_SU74.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: SU74
input: "key1: &alias value1\n&b *alias : value2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_ANCHOR_DECORATES_ALIAS:alias node cannot be decorated with an anchor@23..29]
